--- a/Team.html
+++ b/Team.html
@@ -1,25 +1,10 @@
 <!doctype html>
 <html lang="ru">
   <head>
-        <!-- Yandex.Metrika counter -->
-<script type="text/javascript" >
-   (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
-   m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
-   (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
-
-   ym(89233406, "init", {
-        clickmap:true,
-        trackLinks:true,
-        accurateTrackBounce:true,
-        webvisor:true
-   });
-</script>
-<noscript><div><img src="https://mc.yandex.ru/watch/89233406" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
-<!-- /Yandex.Metrika counter -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Действующий состав</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <title>Главная страница</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <!-- Custom styles for this template -->
     <link href="./css/style.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -28,235 +13,271 @@
   </head>
   <body>
     
-    <header>
-      <nav class="navbar navbar-expand-lg navbar-dark Mycolor fixed-top">
-        <div class="container-fluid ">
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse text-center" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0 w-100">
-              <li class="nav-item">
-                <a class="nav-link My" href="./About.html">О нас</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link My" href="./Team.html">Состав</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link My" href="./Projects.html">Проекты</a>
-              </li>
-            </ul>
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0 w-100 justify-content-end">
-              <li class="nav-item">
-                <a class="nav-link My"  href="./Initiatives.html">Инициативы</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link My"  href="./Сontest.html">Конкурс</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link My"  href="./Сontacts.html">Контакты</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-    </header>
-
+<header>
+  <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+    <div class="container-fluid ">
+      <button class="navbar-toggler MyBar" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse text-center" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0 w-100">
+          <li class="nav-item">
+            <a class="nav-link MyBar" href="./About.html">О нас</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link MyBar" href="./Team.html">Состав</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link MyBar" href="./Projects.html">Проекты</a>
+          </li>
+        </ul>
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0 w-100 justify-content-end">
+          <li class="nav-item">
+            <a class="nav-link MyBar"  href="./Initiatives.html">Инициативы</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link MyBar"  href="./Сontest.html">Конкурс</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link MyBar"  href="./Сontacts.html">Контакты</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+</header>
 <main>
   <div class="container">
     <br>
     <h1 class="text-center" >Действующий состав</h1>
     <hr>
-    <div class="row g-4 justify-content-center align-items-center">
-      <div class="col col-auto mb-3">
-          <div class="MY_card">
-              <a href="./Person.html"><a href="./Person.html"><img src="./img/H8l2UfRkVCw.jpg" class="MY_card" alt="..."> </a> </a>
-              <div class="MY_text">
-                <h5>Мария Николаевна Романова</h5>
-                <br>
-                <br>
-                <p>Председатель молодёжного парламента</p>
-              </div>
-          </div>
-      </div>
-      <div class="col col-auto mb-3">
-          <div class="MY_card">
-              <a href="./Person.html"><a href="./Person.html"><img src="./img/perik.jpg" class="MY_card" alt="..."> </a> </a>
-              <div class="MY_text">
-                <h5>Перик Денис Валерьевич</h5>
-                <br>
-                <br>
-                <p>Заместитель председателя Молодёжного парламента по законотворческой деятельности</p>
-              </div>
-          </div>
-      </div>
-      <div class="col col-auto mb-3">
-          <div class="MY_card">
-              <a href="./Person.html"><a href="./Person.html"><img src="./img/ishutin.jpg" class="MY_card" alt="..."> </a> </a>
-              <div class="MY_text">
-                <h5>Ишутин Иван Николаевич</h5>
-                <br>
-                <br>
-                <p>Заместитель председателя Молодёжного парламента по проектной деятельности</p>
-              </div>
-          </div>
-      </div>
-      <div class="col col-auto mb-3">
-          <div class="MY_card">
-              <a href="./Person.html"><a href="./Person.html"><img src="./img/koval.jpg" class="MY_card" alt="..."> </a> </a>
-              <div class="MY_text">
-                <h5>Коваль Денис Вячеславович</h5>
-                <br>
-                <br>
-                <p>Заместитель председателя комитета по делам Севера и коренных малочисленных народов</p>
-              </div>
-          </div>
-      </div>
-      <div class="col col-auto mb-3">
-          <div class="MY_card">
-              <a href="./Person.html"><a href="./Person.html"><img src="./img/kisterskii.jpg" class="MY_card" alt="..."> </a> </a>
-              <div class="MY_text">
-                <h5>Кистерский Константин Александрович</h5>
-                <br>
-                <br>
-                <p>Заместитель председателя Молодёжного парламента по внешним связям</p>
-              </div>
-          </div>
-      </div>
-    </div>
-    <br>
-    <h2 class="text-center" >ЮРИДИЧЕСКАЯ СЛУЖБА</h2>
-    <br>
-    <div class="row g-4 justify-content-center align-items-center">
-      <div class="col col-auto mb-3">
-          <div class="MY_card">
-              <a href="./Person.html"><a href="./Person.html"><img src="./img/Starodymova.jpg" class="MY_card" alt="..."> </a> </a>
-              <div class="MY_text">
-                <h5>Стародумова Арина Андреевна</h5>
-                <br>
-                <br>
-                <p>Руководитель Юридической службы</p>
-              </div>
-          </div>
-      </div>
-      <div class="col col-auto mb-3">
-          <div class="MY_card">
-              <img src="./img/216A0506.jpg" class="MY_card" alt="...">
-              <div class="MY_text">
-                <h5>Алексей Дмитриевич Широков</h5>
-                <br>
-                <br>
-                <p>Заместитель Председателя Юридической службы</p>
-              </div>
-          </div>
-      </div>
-      <div class="col col-auto mb-3">
-          <div class="MY_card">
-              <a href="./Person.html"><img src="./img/Navrodskaya.jpg" class="MY_card" alt="..."> </a>
-              <div class="MY_text">
-                <h5>Навродская Наталья Владимировна</h5>
-                <br>
-                <br>
-                <p>Член Юридической службы</p>
-              </div>
-          </div>
-      </div>
-      <div class="col col-auto mb-3">
-          <div class="MY_card">
-              <a href="./Person.html"><img src="./img/lasica.jpg" class="MY_card" alt="..."> </a>
-              <div class="MY_text">
-                <h5>Ласица Анастасия Денисовна</h5>
-                <br>
-                <br>
-                <p>Член Юридической службы</p>
-              </div>
-          </div>
-      </div>
-    </div>
-    <br>
-    <h2 class="text-center" >КОМИТЕТ ПО ГОСУДАРСТВЕННОМУ УСТРОЙСТВУ, ЗАКОНОДАТЕЛЬСТВУ И МЕСТНОМУ САМОУПРАВЛЕНИЮ</h2>
-    <br>
-    <div class="row g-4 justify-content-center align-items-center">
-      <div class="col col-auto mb-3">
-          <div class="MY_card">
-              <a href="./Person.html"><img src="./img/kisterskii.jpg" class="MY_card" alt="..."> </a>
-              <div class="MY_text">
-                <h5>Кистерский Константин Александрович</h5>
-                <br>
-                <br>
-                <p>Председатель комитета по государственному устройству, законодательству и местному самоуправлению</p>
-              </div>
-          </div>
-      </div>
-      <div class="col col-auto mb-3">
-        <div class="MY_card">
-            <img src="./img/216A0506.jpg" class="MY_card" alt="...">
-            <div class="MY_text">
-              <h5>Алексей Дмитриевич Широков</h5>
-              <br>
-              <br>
-              <p>Заместитель Председателя комитета по государственному устройству, законодательству и местному самоуправлению</p>
-            </div>
+    <div class="row g-4">
+     <div class="mpcard">
+        <div class="mpcard1">
+          <p class="text-center">ПРЕДСЕДАТЕЛЬ МОЛОДЁЖНОГО ПАРЛАМЕНТА</p>
         </div>
+      </div>
+      <div class="mpcard">  
+        <a href="./Person.html">
+          <div class="mpcardb2"></div>
+            <img src="./img/H8l2UfRkVCw.jpg" class="mpcard2" alt="...">
+          <div class="mpcard3">
+            <p>Мария Романова<p>
+          </div>
+        </a>
+      </div>
+    </div> 
+    <hr>
+    <div class="row g-4">
+      <div class="mpcard">
+         <div class="mpcard1">
+           <p class="text-center">КООРДИНАТОР МОЛОДЁЖНЫХ ПАРЛМЕНТОВ СФО</p>
+         </div>
+       </div>
+       <div class="mpcard">  
+         <a href="./Person.html">
+           <div class="mpcardb2"></div>
+             <img src="./img/WYNG4MqabX0.jpg" class="mpcard2" alt="...">
+           <div class="mpcard3">
+             <p>Валерия Ступина<p>
+           </div>
+         </a>
+       </div>
+     </div> 
+     <hr>
+     <div class="row g-4">
+      <div class="mpcard">
+         <div class="mpcard1">
+           <p class="text-center">ЗАМЕСТИТЕТЕЛИ ПРЕДСЕДАТЕЛЯ МОЛОДЁЖНОГО ПАРЛАМЕНТА</p>
+         </div>
+       </div>
+       <div class="mpcard">  
+         <a href="./Person.html">
+           <div class="mpcardb2"></div>
+             <img src="./img/perik.jpg" class="mpcard2" alt="...">
+           <div class="mpcard3">
+             <p>Денис Перик<p>
+           </div>
+         </a>
+       </div>
+       <div class="mpcard">  
+        <a href="./Person.html">
+          <div class="mpcardb2"></div>
+            <img src="./img/kisterskii.jpg" class="mpcard2" alt="...">
+          <div class="mpcard3">
+            <p>Константин Кистерский<p>
+          </div>
+        </a>
+      </div>
+      <div class="mpcard">  
+        <a href="./Person.html">
+          <div class="mpcardb2"></div>
+            <img src="./img/ishutin.jpg" class="mpcard2" alt="...">
+          <div class="mpcard3">
+            <p>Иван Ишутин<p>
+          </div>
+        </a>
+      </div>
+      <div class="mpcard">  
+        <a href="./Person.html">
+          <div class="mpcardb2"></div>
+            <img src="./img/koval.jpg" class="mpcard2" alt="...">
+          <div class="mpcard3">
+            <p>Денис Коваль<p>
+          </div>
+        </a>
+      </div>
+    </div> 
+    <hr>
+    <div class="row g-4">
+      <div class="mpcard">
+         <div class="mpcard1">
+           <p class="text-center">ЮРИДИЧЕСКАЯ СЛУЖБА</p>
+         </div>
+       </div>
+       <div class="mpcard">  
+         <a href="./Person.html">
+           <div class="mpcardb2"></div>
+             <img src="./img/Starodymova.jpg" class="mpcard2" alt="...">
+           <div class="mpcard3">
+             <p>Арина Стародумова<p>
+           </div>
+         </a>
+       </div>
+       <div class="mpcard">  
+        <a href="./Person.html">
+          <div class="mpcardb2"></div>
+            <img src="./img/216A0506.jpg" class="mpcard2" alt="...">
+          <div class="mpcard3">
+            <p>Алексей Широков<p>
+          </div>
+        </a>
+      </div>
+      <div class="mpcard">  
+        <a href="./Person.html">
+          <div class="mpcardb2"></div>
+            <img src="./img/lasica.jpg" class="mpcard2" alt="...">
+          <div class="mpcard3">
+            <p>Анастасия Ласица<p>
+          </div>
+        </a>
+      </div>
     </div>
-      <div class="col col-auto mb-3">
-          <div class="MY_card">
-              <a href="./Person.html"><img src="./img/Petrov.jpg" class="MY_card" alt="..."> </a>
-              <div class="MY_text">
-                <h5>Петров Евгений Вячеславович</p>
-                <br>
-                <br>
-                <p>Член комитета по государственному устройству, законодательству и местному самоуправлению</h5>
-              </div>
+    <hr>
+    <div class="row g-4">
+      <div class="mpcard">
+         <div class="mpcard1">
+           <p class="text-center">КОМИТЕТ ПО ГОСУДАРСТВЕННОМУ УСТРОЙСТВУ, ЗАКОНОДАТЕЛЬСТВУ И МЕСТНОМУ САМОУПРАВЛЕНИЮ</p>
+         </div>
+       </div>
+       <div class="mpcard">  
+         <a href="./Person.html">
+           <div class="mpcardb2"></div>
+             <img src="./img/kisterskii.jpg" class="mpcard2" alt="...">
+           <div class="mpcard3">
+             <p>Константин Кистерский<p>
+           </div>
+         </a>
+       </div>
+       <div class="mpcard">  
+        <a href="./Person.html">
+          <div class="mpcardb2"></div>
+            <img src="./img/216A0506.jpg" class="mpcard2" alt="...">
+          <div class="mpcard3">
+            <p>Алексей Широков<p>
           </div>
+        </a>
       </div>
-      <div class="col col-auto mb-3">
-          <div class="MY_card">
-              <a href="./Person.html"><img src="./img/perik.jpg" class="MY_card" alt="..."> </a>
-              <div class="MY_text">
-                <h5>Перик Денис Валерьевич</h5>
-                <br>
-                <br>
-                <p>Член комитета по государственному устройству, законодательству и местному самоуправлению</p>
-              </div>
+      <div class="mpcard">  
+        <a href="./Person.html">
+          <div class="mpcardb2"></div>
+            <img src="./img/perik.jpg" class="mpcard2" alt="...">
+          <div class="mpcard3">
+            <p>Денис Перик<p>
           </div>
+        </a>
       </div>
-      <div class="col col-auto mb-3">
-          <div class="MY_card">
-              <a href="./Person.html"><img src="./img/Navrodskaya.jpg" class="MY_card" alt="..."> </a>
-              <div class="MY_text">
-                <h5>Навродская Наталья Владимировна</h5>
-                <br>
-                <br>
-                <p>Член комитета по государственному устройству, законодательству и местному самоуправлению</p>
-              </div>
+      <div class="mpcard">  
+        <a href="./Person.html">
+          <div class="mpcardb2"></div>
+            <img src="./img/Paramonova.png" class="mpcard2" alt="...">
+          <div class="mpcard3">
+            <p>Яна Парамонова<p>
           </div>
+        </a>
       </div>
-      <div class="col col-auto mb-3">
-        <div class="MY_card">
-            <a href="./Person.html"><img src="./img/Drozd.jpg" class="MY_card" alt="..."> </a>
-            <div class="MY_text">
-              <h5>Дрозд Алексей Валерьевич</h5>
-              <br>
-              <br>
-              <p>Член комитета по государственному устройству, законодательству и местному самоуправлению</p>
-            </div>
-        </div>
     </div>
-    <div class="col col-auto mb-3">
-      <div class="MY_card">
-          <a href="./Person.html"><img src="./img/Paramonova.png" class="MY_card" alt="..."> </a>
-          <div class="MY_text">
-            <h5>Парамонова Яна Алексеевна</h5>
-            <br>
-            <br>
-            <p>Член комитета по государственному устройству, законодательству и местному самоуправлению</p>
+    <hr>
+    <div class="row g-4">
+      <div class="mpcard">
+         <div class="mpcard1">
+           <p class="text-center">КОМИТЕТ ПО ГОСУДАРСТВЕННОМУ УСТРОЙСТВУ, ЗАКОНОДАТЕЛЬСТВУ И МЕСТНОМУ САМОУПРАВЛЕНИЮ</p>
+         </div>
+       </div>
+       <div class="mpcard">  
+         <a href="./Person.html">
+           <div class="mpcardb2"></div>
+             <img src="./img/lasica.jpg" class="mpcard2" alt="...">
+           <div class="mpcard3">
+             <p>Анастасия Ласица<p>
+           </div>
+         </a>
+       </div>
+       <div class="mpcard">  
+        <a href="./Person.html">
+          <div class="mpcardb2"></div>
+            <img src="./img/isakov.jpg" class="mpcard2" alt="...">
+          <div class="mpcard3">
+            <p>Ролан Исаков<p>
           </div>
+        </a>
       </div>
-  </div>
+      <div class="mpcard">  
+        <a href="./Person.html">
+          <div class="mpcardb2"></div>
+            <img src="./img/prihodko.jpg" class="mpcard2" alt="...">
+          <div class="mpcard3">
+            <p>Владислав Приходько<p>
+          </div>
+        </a>
+      </div>
+      <div class="mpcard">  
+        <a href="./Person.html">
+          <div class="mpcardb2"></div>
+            <img src="./img/eliseev.jpg" class="mpcard2" alt="...">
+          <div class="mpcard3">
+            <p>Сергей Елисеев<p>
+          </div>
+        </a>
+      </div>
+      <div class="mpcard">  
+        <a href="./Person.html">
+          <div class="mpcardb2"></div>
+            <img src="./img/vasileva.jpg" class="mpcard2" alt="...">
+          <div class="mpcard3">
+            <p>Васильева Дарья<p>
+          </div>
+        </a>
+      </div>
+      <div class="mpcard">  
+        <a href="./Person.html">
+          <div class="mpcardb2"></div>
+            <img src="./img/lasarev.jpg" class="mpcard2" alt="...">
+          <div class="mpcard3">
+            <p>Никита Лазарев<p>
+          </div>
+        </a>
+      </div>
+      <div class="mpcard">  
+        <a href="./Person.html">
+          <div class="mpcardb2"></div>
+            <img src="./img/kyrenev.jpg" class="mpcard2" alt="...">
+          <div class="mpcard3">
+            <p>Иван Куренев<p>
+          </div>
+        </a>
+      </div>
     </div>
-    <br>
-  </div>
 </main>  
 <footer>
   <div class="container">
