--- a/Team.html
+++ b/Team.html
@@ -211,7 +211,7 @@
     <div class="row g-4">
       <div class="mpcard">
          <div class="mpcard1">
-           <p class="text-center">КОМИТЕТ ПО ГОСУДАРСТВЕННОМУ УСТРОЙСТВУ, ЗАКОНОДАТЕЛЬСТВУ И МЕСТНОМУ САМОУПРАВЛЕНИЮ</p>
+           <p class="text-center">КОМИТЕТ ПО БЮДЖЕТУ, ГОСУДАРСТВЕННОЙ СОБСТВЕННОСТИ И ЗАЩИТЕ ПРАВ ГРАЖДАН</p>
          </div>
        </div>
        <div class="mpcard">  
