--- a/Team.html
+++ b/Team.html
@@ -50,7 +50,7 @@
   <div class="container">
     <br>
     <h1 class="text-center" >Действующий состав</h1>
-    <hr>
+    <br>
     <div class="row g-4">
      <div class="mpcard">
         <div class="mpcard1">
@@ -67,7 +67,7 @@
         </a>
       </div>
     </div> 
-    <hr>
+    <br>
     <div class="row g-4">
       <div class="mpcard">
          <div class="mpcard1">
@@ -84,7 +84,7 @@
          </a>
        </div>
      </div> 
-     <hr>
+     <br>
      <div class="row g-4">
       <div class="mpcard">
          <div class="mpcard1">
@@ -128,7 +128,7 @@
         </a>
       </div>
     </div> 
-    <hr>
+    <br>
     <div class="row g-4">
       <div class="mpcard">
          <div class="mpcard1">
@@ -163,7 +163,7 @@
         </a>
       </div>
     </div>
-    <hr>
+    <br>
     <div class="row g-4">
       <div class="mpcard">
          <div class="mpcard1">
@@ -207,7 +207,7 @@
         </a>
       </div>
     </div>
-    <hr>
+    <br>
     <div class="row g-4">
       <div class="mpcard">
          <div class="mpcard1">
@@ -278,13 +278,39 @@
         </a>
       </div>
     </div>
+    <br>
+    <div class="row g-4">
+      <div class="mpcard">
+         <div class="mpcard1">
+           <p class="text-center">КОМИТЕТ ПО ЭКОНОМИКЕ И НАЛОГОВОЙ ПОЛИТИКЕ</p>
+         </div>
+       </div>
+       <div class="mpcard">  
+         <a href="./Person.html">
+           <div class="mpcardb2"></div>
+             <img src="./img/sergeenko.jpg" class="mpcard2" alt="...">
+           <div class="mpcard3">
+             <p>Анастасия Сергеенко<p>
+           </div>
+         </a>
+       </div>
+       <div class="mpcard">  
+        <a href="./Person.html">
+          <div class="mpcardb2"></div>
+            <img src="./img/kylichihina.jpg" class="mpcard2" alt="...">
+          <div class="mpcard3">
+            <p>Ася Куличихина<p>
+          </div>
+        </a>
+      </div>
+    </div>
+    <br>
 </main>  
 <footer>
-  <div class="container">
+  <div class="text-center">
   Молодёжный парламент, 2022г.
   </div>
 </footer>
-
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script> 
   </body>
 </html>
