--- a/Team.html
+++ b/Team.html
@@ -11,8 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa&display=swap" rel="stylesheet">
   </head>
-  <body>
-    
+  <body>   
 <header>
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
     <div class="container-fluid ">
@@ -52,115 +51,123 @@
     <h1 class="text-center" >Действующий состав</h1>
     <br>
     <div class="row g-4">
-     <div class="mpcard">
+      <div class="mpcard">
         <div class="mpcard1">
           <p class="text-center">ПРЕДСЕДАТЕЛЬ МОЛОДЁЖНОГО ПАРЛАМЕНТА</p>
         </div>
       </div>
-      <div class="mpcard">  
-        <a href="./Person.html">
-          <div class="mpcardb2"></div>
+      <div class="col row">
+        <div class="mpcard">  
+          <a href="./Person.html">
+            <div class="mpcardb2"></div>
             <img src="./img/H8l2UfRkVCw.jpg" class="mpcard2" alt="...">
-          <div class="mpcard3">
-            <p>Мария Романова<p>
-          </div>
-        </a>
+            <div class="mpcard3">
+              <p>Мария<br>Романова<p>
+            </div>
+          </a>
+        </div>
       </div>
-    </div> 
+    </div>
     <br>
     <div class="row g-4">
       <div class="mpcard">
-         <div class="mpcard1">
-           <p class="text-center">КООРДИНАТОР МОЛОДЁЖНЫХ ПАРЛМЕНТОВ СФО</p>
-         </div>
-       </div>
-       <div class="mpcard">  
-         <a href="./Person.html">
-           <div class="mpcardb2"></div>
-             <img src="./img/WYNG4MqabX0.jpg" class="mpcard2" alt="...">
-           <div class="mpcard3">
-             <p>Валерия Ступина<p>
-           </div>
-         </a>
-       </div>
-     </div> 
-     <br>
-     <div class="row g-4">
+        <div class="mpcard1">
+          <p class="text-center">КООРДИНАТОР МОЛОДЁЖНЫХ ПАРЛМЕНТОВ СФО</p>
+        </div>
+      </div>
+      <div class="col row">
+        <div class="mpcard">  
+          <a href="./Person.html">
+            <div class="mpcardb2"></div>
+            <img src="./img/WYNG4MqabX0.jpg" class="mpcard2" alt="...">
+            <div class="mpcard3">
+              <p>Валерия<br>Ступина<p>
+            </div>
+          </a>
+        </div>
+      </div>
+    </div>
+    <br>
+    <div class="row g-4">
       <div class="mpcard">
-         <div class="mpcard1">
-           <p class="text-center">ЗАМЕСТИТЕТЕЛИ ПРЕДСЕДАТЕЛЯ МОЛОДЁЖНОГО ПАРЛАМЕНТА</p>
-         </div>
-       </div>
-       <div class="mpcard">  
-         <a href="./Person.html">
-           <div class="mpcardb2"></div>
-             <img src="./img/perik.jpg" class="mpcard2" alt="...">
-           <div class="mpcard3">
-             <p>Денис Перик<p>
-           </div>
-         </a>
-       </div>
-       <div class="mpcard">  
-        <a href="./Person.html">
-          <div class="mpcardb2"></div>
+        <div class="mpcard1">
+          <p class="text-center">ЗАМЕСТИТЕТЕЛИ ПРЕДСЕДАТЕЛЯ МОЛОДЁЖНОГО ПАРЛАМЕНТА</p>
+        </div>
+      </div>
+      <div class="col row">
+        <div class="mpcard">  
+          <a href="./Person.html">
+            <div class="mpcardb2"></div>
+            <img src="./img/perik.jpg" class="mpcard2" alt="...">
+            <div class="mpcard3">
+              <p>Денис<br>Перик<p>
+            </div>
+          </a>
+        </div>
+        <div class="mpcard">  
+          <a href="./Person.html">
+            <div class="mpcardb2"></div>
             <img src="./img/kisterskii.jpg" class="mpcard2" alt="...">
-          <div class="mpcard3">
-            <p>Константин Кистерский<p>
-          </div>
-        </a>
-      </div>
-      <div class="mpcard">  
-        <a href="./Person.html">
-          <div class="mpcardb2"></div>
+            <div class="mpcard3">
+              <p>Константин<br>Кистерский<p>
+            </div>
+          </a>
+        </div>
+        <div class="mpcard">  
+          <a href="./Person.html">
+            <div class="mpcardb2"></div>
             <img src="./img/ishutin.jpg" class="mpcard2" alt="...">
-          <div class="mpcard3">
-            <p>Иван Ишутин<p>
-          </div>
-        </a>
-      </div>
-      <div class="mpcard">  
-        <a href="./Person.html">
-          <div class="mpcardb2"></div>
+            <div class="mpcard3">
+              <p>Иван<br>Ишутин<p>
+            </div>
+          </a>
+        </div>
+        <div class="mpcard">  
+          <a href="./Person.html">
+            <div class="mpcardb2"></div>
             <img src="./img/koval.jpg" class="mpcard2" alt="...">
-          <div class="mpcard3">
-            <p>Денис Коваль<p>
-          </div>
-        </a>
+            <div class="mpcard3">
+              <p>Денис<br>Коваль<p>
+            </div>
+          </a>
+        </div>
       </div>
-    </div> 
+    </div>
     <br>
     <div class="row g-4">
       <div class="mpcard">
-         <div class="mpcard1">
-           <p class="text-center">ЮРИДИЧЕСКАЯ СЛУЖБА</p>
-         </div>
-       </div>
-       <div class="mpcard">  
-         <a href="./Person.html">
-           <div class="mpcardb2"></div>
-             <img src="./img/Starodymova.jpg" class="mpcard2" alt="...">
-           <div class="mpcard3">
-             <p>Арина Стародумова<p>
-           </div>
-         </a>
-       </div>
-       <div class="mpcard">  
-        <a href="./Person.html">
-          <div class="mpcardb2"></div>
-            <img src="./img/216A0506.jpg" class="mpcard2" alt="...">
-          <div class="mpcard3">
-            <p>Алексей Широков<p>
-          </div>
-        </a>
+        <div class="mpcard1">
+          <p class="text-center">ЮРИДИЧЕСКАЯ СЛУЖБА</p>
+        </div>
       </div>
-      <div class="mpcard">  
-        <a href="./Person.html">
-          <div class="mpcardb2"></div>
+      <div class="col row">
+        <div class="mpcard">  
+          <a href="./Person.html">
+            <div class="mpcardb2"></div>
+            <img src="./img/Starodymova.jpg" class="mpcard2" alt="...">
+            <div class="mpcard3">
+              <p>Арина<br>Стародумова<p>
+            </div>
+          </a>
+        </div>
+        <div class="mpcard">  
+          <a href="./Person.html">
+            <div class="mpcardb2"></div>
+            <img src="./img/216A0506.jpg" class="mpcard2" alt="...">
+            <div class="mpcard3">
+              <p>Алексей<br>Широков<p>
+            </div>
+          </a>
+        </div>
+        <div class="mpcard">  
+          <a href="./Person.html">
+            <div class="mpcardb2"></div>
             <img src="./img/lasica.jpg" class="mpcard2" alt="...">
-          <div class="mpcard3">
-            <p>Анастасия Ласица<p>
-          </div>
-        </a>
+            <div class="mpcard3">
+              <p>Анастасия<br>Ласица<p>
+            </div>
+          </a>
+        </div>
       </div>
     </div>
     <br>
@@ -170,12 +177,13 @@
            <p class="text-center">КОМИТЕТ ПО ГОСУДАРСТВЕННОМУ УСТРОЙСТВУ, ЗАКОНОДАТЕЛЬСТВУ И МЕСТНОМУ САМОУПРАВЛЕНИЮ</p>
          </div>
        </div>
+       <div class="col row">
        <div class="mpcard">  
          <a href="./Person.html">
            <div class="mpcardb2"></div>
              <img src="./img/kisterskii.jpg" class="mpcard2" alt="...">
            <div class="mpcard3">
-             <p>Константин Кистерский<p>
+             <p>Константин<br>Кистерский<p>
            </div>
          </a>
        </div>
@@ -184,7 +192,7 @@
           <div class="mpcardb2"></div>
             <img src="./img/216A0506.jpg" class="mpcard2" alt="...">
           <div class="mpcard3">
-            <p>Алексей Широков<p>
+            <p>Алексей<br>Широков<p>
           </div>
         </a>
       </div>
@@ -193,7 +201,7 @@
           <div class="mpcardb2"></div>
             <img src="./img/perik.jpg" class="mpcard2" alt="...">
           <div class="mpcard3">
-            <p>Денис Перик<p>
+            <p>Денис<br>Перик<p>
           </div>
         </a>
       </div>
@@ -202,9 +210,10 @@
           <div class="mpcardb2"></div>
             <img src="./img/Paramonova.png" class="mpcard2" alt="...">
           <div class="mpcard3">
-            <p>Яна Парамонова<p>
+            <p>Яна<br>Парамонова<p>
           </div>
         </a>
+      </div>
       </div>
     </div>
     <br>
@@ -214,12 +223,13 @@
            <p class="text-center">КОМИТЕТ ПО БЮДЖЕТУ, ГОСУДАРСТВЕННОЙ СОБСТВЕННОСТИ И ЗАЩИТЕ ПРАВ ГРАЖДАН</p>
          </div>
        </div>
+       <div class="col row">
        <div class="mpcard">  
          <a href="./Person.html">
            <div class="mpcardb2"></div>
              <img src="./img/lasica.jpg" class="mpcard2" alt="...">
            <div class="mpcard3">
-             <p>Анастасия Ласица<p>
+             <p>Анастасия<br>Ласица<p>
            </div>
          </a>
        </div>
@@ -228,7 +238,7 @@
           <div class="mpcardb2"></div>
             <img src="./img/isakov.jpg" class="mpcard2" alt="...">
           <div class="mpcard3">
-            <p>Ролан Исаков<p>
+            <p>Ролан<br>Исаков<p>
           </div>
         </a>
       </div>
@@ -237,7 +247,7 @@
           <div class="mpcardb2"></div>
             <img src="./img/prihodko.jpg" class="mpcard2" alt="...">
           <div class="mpcard3">
-            <p>Владислав Приходько<p>
+            <p>Владислав<br>Приходько<p>
           </div>
         </a>
       </div>
@@ -246,7 +256,7 @@
           <div class="mpcardb2"></div>
             <img src="./img/eliseev.jpg" class="mpcard2" alt="...">
           <div class="mpcard3">
-            <p>Сергей Елисеев<p>
+            <p>Сергей<br>Елисеев<p>
           </div>
         </a>
       </div>
@@ -255,7 +265,7 @@
           <div class="mpcardb2"></div>
             <img src="./img/vasileva.jpg" class="mpcard2" alt="...">
           <div class="mpcard3">
-            <p>Васильева Дарья<p>
+            <p>Васильева<br>Дарья<p>
           </div>
         </a>
       </div>
@@ -264,7 +274,7 @@
           <div class="mpcardb2"></div>
             <img src="./img/lasarev.jpg" class="mpcard2" alt="...">
           <div class="mpcard3">
-            <p>Никита Лазарев<p>
+            <p>Никита<br>Лазарев<p>
           </div>
         </a>
       </div>
@@ -273,10 +283,11 @@
           <div class="mpcardb2"></div>
             <img src="./img/kyrenev.jpg" class="mpcard2" alt="...">
           <div class="mpcard3">
-            <p>Иван Куренев<p>
+            <p>Иван<br>Куренев<p>
           </div>
         </a>
       </div>
+       </div>
     </div>
     <br>
     <div class="row g-4">
@@ -285,12 +296,13 @@
            <p class="text-center">КОМИТЕТ ПО ЭКОНОМИКЕ И НАЛОГОВОЙ ПОЛИТИКЕ</p>
          </div>
        </div>
+       <div class="col row">
        <div class="mpcard">  
          <a href="./Person.html">
            <div class="mpcardb2"></div>
              <img src="./img/sergeenko.jpg" class="mpcard2" alt="...">
            <div class="mpcard3">
-             <p>Анастасия Сергеенко<p>
+             <p>Анастасия<br>Сергеенко<p>
            </div>
          </a>
        </div>
@@ -299,10 +311,11 @@
           <div class="mpcardb2"></div>
             <img src="./img/kylichihina.jpg" class="mpcard2" alt="...">
           <div class="mpcard3">
-            <p>Ася Куличихина<p>
+            <p>Ася<br>Куличихина<p>
           </div>
         </a>
       </div>
+       </div>
     </div>
     <br>
 </main>  
