--- a/Person.html
+++ b/Person.html
@@ -1,25 +1,10 @@
 <!doctype html>
 <html lang="ru">
   <head>
-    <!-- Yandex.Metrika counter -->
-<script type="text/javascript" >
-   (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
-   m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
-   (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
-
-   ym(89233406, "init", {
-        clickmap:true,
-        trackLinks:true,
-        accurateTrackBounce:true,
-        webvisor:true
-   });
-</script>
-<noscript><div><img src="https://mc.yandex.ru/watch/89233406" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
-<!-- /Yandex.Metrika counter -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Мария Николаевна Романова</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <title>Главная страница</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <!-- Custom styles for this template -->
     <link href="./css/style.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -28,43 +13,50 @@
   </head>
   <body>
     
-    <header>
-      <nav class="navbar navbar-expand-lg navbar-dark Mycolor fixed-top">
-        <div class="container-fluid ">
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse text-center" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0 w-100">
-              <li class="nav-item">
-                <a class="nav-link My" href="./About.html">О нас</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link My" href="./Team.html">Состав</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link My" href="./Projects.html">Проекты</a>
-              </li>
-            </ul>
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0 w-100 justify-content-end">
-              <li class="nav-item">
-                <a class="nav-link My"  href="./Initiatives.html">Инициативы</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link My"  href="./Сontest.html">Конкурс</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link My"  href="./Сontacts.html">Контакты</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-    </header>
-
-<main>
+<header>
+  <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+    <div class="container-fluid ">
+      <button class="navbar-toggler MyBar" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse text-center" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0 w-100">
+          <li class="nav-item">
+            <a class="nav-link MyBar" href="./About.html">О нас</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link MyBar" href="./Team.html">Состав</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link MyBar" href="./Projects.html">Проекты</a>
+          </li>
+        </ul>
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0 w-100 justify-content-end">
+          <li class="nav-item">
+            <a class="nav-link MyBar"  href="./Initiatives.html">Инициативы</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link MyBar"  href="./Сontest.html">Конкурс</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link MyBar"  href="./Сontacts.html">Контакты</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+</header>
+<main>  <div class="otstup"></div>  <div class="otstup"></div>  <div class="otstup"></div>
   <div class="container">
-    <br>
+    <div class="row">
+      <div class="col-4">
+        <div class="fperson"></div>
+      </div>
+      <div class="col-8">
+        g
+      </div>
+    </div>
+    <!-- <br>
     <h1 class="text-center" >Мария Николаевна Романова</h1>
     <hr>
     <h3 class="text-center">Председатель Молодёжного парламента</h3>
@@ -104,7 +96,7 @@
             <p>С 2019 года - член Регионального штаба Красноярского регионального отделения Всероссийской общественной организации «Молодая Гвардия Единой России»</p>
         </div>
     </div>
-  </div>
+  </div> -->
   <br>
 </main>  
 <footer>
